Apply bleed fix only if gallery has multiple images

--- a/assets/sass/woocommerce/woocommerce.scss
+++ b/assets/sass/woocommerce/woocommerce.scss
@@ -405,7 +405,7 @@ ul.products {
 
 			.woocommerce-product-gallery__wrapper {
 				.woocommerce-product-gallery__image {
-					&:not(.flex-active-slide) {
+					&:not(:only-child):not(.flex-active-slide) {
 						opacity: 0;
 					}
 				}
